[metadata]
name = NEURAL_py_EEG
version = 0.1.1
author = Brian Murphy
author_email = Brian.M.Murphy@umail.ucc.ie
description = A Neonatal EEG Pre-Processing and Feature Set in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrianMur92/NEURAL_py_EEG_feature_set
project_urls =
    Bug Tracker = https://github.com/BrianMur92/NEURAL_py_EEG_feature_set/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src